fix: bug on small device compress info div

--- a/src/components/MusicPlayer/index.scss
+++ b/src/components/MusicPlayer/index.scss
@@ -110,8 +110,6 @@ $transition: .3s all ease;
       }
     }
     .play-list{
-      display: flex;
-      flex-direction: column;
       padding: 10px;
       padding-top: 15px;
       height: 180px;
